# piiwatch

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: tests.yml
piiwatch/: __init__.py  cli.py  engine.py  file_discovery.py  scoring.py
piiwatch/ai/: __init__.py  anthropic_provider.py  classifier.py  factory.py  openai_provider.py  provider.py
piiwatch/detectors/: api_key.py  base.py  credit_card.py  email.py  phone.py  registry.py  ssn.py
piiwatch/reporting/: csv_reporter.py  html_reporter.py  markdown_reporter.py  sarif_reporter.py  terminal.py
test_data/: clean.txt  config.env  users.csv
tests/: fakes.py  test_ai_classifier.py  test_api_key.py  test_cli.py  test_credit_card.py  test_email.py  test_engine.py  test_engine_ai_integration.py  test_phone.py  test_reporting_csv.py  test_reporting_html.py  test_reporting_markdown.py  test_reporting_sarif.py  test_ssn.py
