[project]
name = "piiwatch"
version = "0.1.0"
description = "Open-source AI-powered platform for detecting and preventing sensitive data leakage in enterprise systems."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
]
dependencies = ["click>=8.0"]

[tool.setuptools.packages.find]
include = ["piiwatch*"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
ai = ["anthropic>=0.40.0"]
ai-openai = ["openai>=1.40.0"]

[project.scripts]
piiwatch = "piiwatch.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
